# online-learning

./: .gitignore  CMakeLists.txt  README.md
data/: image_0  image_1  image_2  image_3  image_4  image_5  image_6  image_7  image_8  image_9
data/criteo/: test_y  train_y
model/: _auc.py  afm.py  ffm.py  fm.py  lenet.py  lenet_mnist.py  lenet_mnist_with_train.py  lr.py  mlp.py  mlp_mnist.py  mlp_mnist_with_train.py  model_list  nfm.py  template.py  vgg.py  vgg_letter.py  widedeep.py
model/model_conf/: afm.json  ffm.json  fm.json  lenet.json  lenet_mnist.json  lr.json  mlp.json  mlp_mnist.json  nfm.json  vgg.json  vgg_letters.json  widedeep.json
model/model_pb/: afm.pb  fm.pb  lenet.pb  lenet_mnist.pb  lr.pb  mlp.pb  mlp_mnist.pb  nfm.pb  vgg.pb  vgg_letters.pb  widedeep.pb
proto/: TrainServing.java  gout  train_serving.grpc.pb.cc  train_serving.grpc.pb.h  train_serving.pb.cc  train_serving.pb.h  train_serving.proto
ps/: ps_client_test.cpp  ps_server.cpp
save/: lr  mlp  mlp_mnist
src/: bindpy.cpp  client.cpp  dataset.py  model_conf.hpp  model_manager.h  nist_dataset.py  ol_trainer.cpp  ol_trainer.h  parameter_io.hpp  parameter_pap.hpp  parameter_ps.hpp  run_env.hpp  server.cpp  tensor.hpp  train_api.py  ws_train.cpp  ws_train.h
third_part/libs/: libprotobuf-lite.la  libprotobuf.la  libprotoc.la  libtensorflow_cc.so.1  libz.so.1.2.11  libzmq.la  libzmq.so.5.0.0
utils/: a.out  common.h  criteo_dataset.h  criteo_dataset.hpp  dataset.hpp  letters_dataset.hpp  mnist_dataset.hpp  readme.md  script.cpp  tools.py  xnist_dataset.hpp
